fix(layout): Add `overflow: hidden` to slideing item

--- a/packages/layout/src/sliding/sliding.component.scss
+++ b/packages/layout/src/sliding/sliding.component.scss
@@ -13,5 +13,7 @@
         flex-direction: column;
         align-items: stretch;
         position: relative;
+
+        overflow: hidden;
     }
 }
